external links and absolute URLs

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<h1>Heading text</h1>
+<h1>Tag reference</h1>
 <h2>Seconary heading</h2>
 <p>Type more and then save.</p>
+
+<h2>Links</h2>
+<p>I want <a Href="http://google.com">these words</a> to be clickable and send me to Google. Tags have <em>element</em> and zero or multiple <em>attribute</em> and <em>value</em> pairs. </p>
+<p>It is common to use <code>target="_blank"</code> for external links. WIth external links, you need to use <strong>absolute URLs</strong>. Absolute URLs include the full path to an object typically by utilizing <code>http://</code></p> 
