--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
-<h1>Tag reference</h1>
-<h2>Seconary heading</h2>
-<p>Type more and then save.</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Validation Rules</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    </head>
+    <body>
+        <h1>Tag reference</h1>
+        <h2>Seconary heading</h2>
+        <p>Type more and then save.</p>
 
-<h2>External Links</h2>
-<p>I want <a Href="http://google.com" target="_blank" title="Google">these words</a> to be clickable and send me to Google. Tags have <em>element</em> and zero or multiple <em>attribute</em> and <em>value</em> pairs. </p>
-<p>It is common to use <code>target="_blank"</code> for external links. WIth external links, you need to use <strong>absolute URLs</strong>. Absolute URLs include the full path to an object typically by utilizing <code>http://</code></p> 
+        <h2>External Links</h2>
+        <p>I want <a Href="http://google.com" target="_blank" title="Google">these words</a> to be clickable and send me to Google. Tags have <em>element</em> and zero or multiple <em>attribute</em> and <em>value</em> pairs. </p>
+        <p>It is common to use <code>target="_blank"</code> for external links. WIth external links, you need to use <strong>absolute URLs</strong>. Absolute URLs include the full path to an object typically by utilizing <code>http://</code></p> 
 
-<h2>Internal Links</h2>
-<p>Go learn more <a href="about.html">about</a> me. Internal Links use <strong>relative URLs</strong>. Relative URLs just specify the name of the HTML document and any extra path information.</p>
+        <h2>Internal Links</h2>
+        <p>Go learn more <a href="about.html">about</a> me. Internal Links use <strong>relative URLs</strong>. Relative URLs just specify the name of the HTML document and any extra path information.</p>
 
-<h2>Mailto Links</h2>
-<p>We can make a link that will <a href="mailto:name@domain.com">send someone an email</a>. </p>
+        <h2>Mailto Links</h2>
+        <p>We can make a link that will <a href="mailto:name@domain.com">send someone an email</a>. </p>
+    </body>
+</html>
