--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Validation Rules</title>
+        <title>Images</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
         <h1>Tag reference</h1>
+        
+        <img src="img/200.jpg" alt="Bill Murray" title="Bill Murray jazz hands." />
+        
         <h2>Seconary heading</h2>
         <p>Type more and then save.</p>
 
