--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lists and Tables</title>
+        <title>CSS</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" href="css/base.css" /> 
     </head>
     <body>
         <h1>Tag reference</h1>
@@ -41,7 +42,7 @@
         
         <img src="img/bill.jpg" alt="Bill Murray" title="Bill Murray jazz hands." />
         
-        <h2>Seconary heading</h2>
+        <h2>Secondary heading</h2>
         <p>Type more and then save.</p>
 
         <h2>External Links</h2>
