--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <body>
         <header>
             <h1>
-                <a href="index.html">Hangout Permalinks</a>
+                <a href="index.html">Home</a>
             </h1>
             <nav>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a> 
             </nav>
