--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1>
-                <a href="index.html">Home</a>
+                <a href="index.html">Hangout Permalinks</a>
             </h1>
             <nav>
                 <a href="index.html">Home</a>
@@ -17,7 +17,7 @@
             </nav>
         </header>
         <article>
-            <h1>Hangout Permalinks</h1>
+            <h1>Home</h1>
             <h2>Make hangouts into easily-reusable online meeting rooms.</h2>
             <p>Google Hangouts are great, but it can be tricky to figure out how to create a hangout and send a link around to people. There are some work arounds (this trick with Google Calendar is particularly useful) but at the end of the day, Hangout just doesn't behave like a first class citizen of the web because its URLs are unreliable. Having a single URL makes it easy to make a habit of meeting in the same "place." Think of it like a conference call extension or even like a physical meeting room.</p>
 
