--- a/codes.html
+++ b/codes.html
@@ -68,3 +68,19 @@ img {
     border: 5px solid #cccccc;
     width: 100%;
 } 
+
+@media screen and (max-width: 600px) {
+
+    body {
+        padding: 5%; 
+    }
+
+    nav {
+        margin-left: 5%; 
+        width: 1000%;  
+    }   
+    article {
+        clear: left;    
+        margin-left: 5%; 
+        width: 1000%
+    }
