--- a/contact.html
+++ b/contact.html
@@ -20,3 +20,18 @@
                 <a href="resume.html">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
+        
+        <article>
+            <p>Please feel free to contact me if you have any questions or inquiries!</p>
+            <p><!-- Do not change the code! -->
+<a id="foxyform_embed_link_610018" href="http://www.foxyform.com/">foxyform</a>
+<script type="text/javascript">
+(function(d, t){
+   var g = d.createElement(t),
+       s = d.getElementsByTagName(t)[0];
+   g.src = "http://www.foxyform.com/js.php?id=610018&sec_hash=0c18aa5e4d0&width=350px";
+   s.parentNode.insertBefore(g, s);
+}(document, "script"));
+</script>
+            <!-- Do not change the code! --> </p>
+        </article>
