--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
             </nav>
 
     <body>
-        <img src="img/resume.JPG" alt="resume" /> 
+        <img src="img/resume.JPG" alt="resume" class="center" /> 
         
     </body>
     
