--- a/contact.html
+++ b/contact.html
@@ -35,3 +35,11 @@
 </script>
             <!-- Do not change the code! --> </p>
         </article>
+        
+        <footer>
+                <p>&copy; 2014 Taryn Bray</p>
+            </footer>
+
+    </body>
+
+</html>
