--- a/resume.html
+++ b/resume.html
@@ -26,3 +26,10 @@
         
     </body>
     
+        <footer>
+                <p>&copy; 2014 Taryn Bray</p>
+            </footer>
+
+    </body>
+
+</html>
