--- a/work.html
+++ b/work.html
@@ -20,3 +20,11 @@
                 <a href="resume.html">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
+        
+        <footer>
+                <p>&copy; 2014 Taryn Bray</p>
+            </footer>
+
+    </body>
+
+</html>
