use id to apply CSS to just one page.

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <link href="css/base.css" rel="stylesheet" />
     </head>
 
-    <body>
+    <body id="about">
         
             <header>
                 <h1>TARYN BRAY</h1>
