--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/base.css" rel="stylesheet" />
     </head>
 
-    <body>
+    <body id="index">
         
             <header>
                 <h1>TARYN BRAY</h1>
