--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <link href="css/base.css" rel="stylesheet" />
     </head>
 
-    <body>
+    <body id="contact">
         
             <header>
                 <h1>TARYN BRAY</h1>
