--- a/about.html
+++ b/about.html
@@ -23,11 +23,15 @@
         <article>
             <h1> About </h1>
             <h2> The Basics: </h2>
-            <p>
+            <aside>
+            <img id="booth" src="img/booth.jpg" alt="booth" class="floatLeft" />
+                <p>
            I was born and raised in Miami, FL -- the city where some of the most eclectic individuals live and the state where the most insane news stories come from. I am currently in my third year at what I believe is the best university in the nation -- University of Florida and I've loved every second it. My hopes after graduation are to pursue a career in the broadcasting or digital media field within the sports industry. 
             </p>
+            <img id="kttm" src="img/kttm.jpg" alt="kttm"  class="floatRight" />  
             <p>I am a life-long lover of all things sports. Throughout my life I've played various sports although in high-school I narrowed it down to basketball and softball. Throughout my high school softball career I was lucky enough to be a starting 2nd basemen on a team that won 3 consecutive state championships in the state of Florida. On weekends you can find me watching every college football game being played, while simultaneously checking college basketball and NBA scores. (Yes, go Heat!) My passion for sports drives deep and I cannot imagine my career going in any direction other than sports. This past summer I gained signifcant experience in the field with social media, web platforms and on-camera experience while interning for MLS team FC Dallas. I try to incorporate my love for sports along with my drive to succeed, humor and personality to create a good working environment. </p>
-        </article>
+                </aside>
+            </article>
         
         <footer>
                 <p>&copy; 2014 Taryn Bray</p>
