--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
             <article>
                 <h1>Home</h1>
                 <img id="self2" src="img/self2.jpg" alt="self" class="center" />
-                <p>If you couldn't already tell, my name is Taryn Bray and I am a third year Journalism and Telecommunications student at the University of Florida. </p>
+                <p>Hello world! My name is Taryn Bray and I am a third year Journalism and Telecommunications student at the University of Florida. </p>
                 <p> GO GATORS!</p>
                 <p>I am specializing in broadcasting and digital media with a hopes to pursue a career in the sports industry after graduating in May 2016.</p>
-            </article>
-            
+                <p>Thanks for checking out my site and I hope you enjoy it. If you have any questions or comments please feel free to navigate to the <a href="contact.html">contact</a> page where you will find a contact form.</p>
+            <h2>Social:</h2>
+                <p>Let's connect!</p>
+                <a href="http://www.linkedin.com/pub/taryn-bray/7b/339/1ab"><img id="linkedin" class="center" src="img/linkedin.jpg" /> </a>
+                <p> Follow me!</p>
+        <a class="twitter-timeline" href="https://twitter.com/taryn_leighb" data-widget-id="537699312881250304">Tweets by @taryn_leighb</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </article>
             <footer>
                 <p>&copy; 2014 Taryn Bray</p>
             </footer>
