--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <h1> About </h1>
             <h2> The Basics: </h2>
             <aside>
-             <img id="keys" src="img/keys.jpg" alt="keys" style="max-width:100%; height:auto;" /> 
+             <img id="keys" src="img/keys.jpg" alt="keys" /> 
                 <p>
            I was born and raised in Miami, FL -- the city where some of the most eclectic individuals live and the state where the most insane news stories come from. I am currently in my third year at what I believe is the best university in the nation -- University of Florida and I've loved every second it. My hopes after graduation are to pursue a career in the broadcasting or digital media field within the sports industry. 
             </p> 
