--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <article>
             <p>Please feel free to contact me if you have any questions or inquiries!</p>
             <p><!-- Do not change the code! -->
-<a id="foxyform_embed_link_610018" href="http://www.foxyform.com/">foxyform</a>
+<a id="foxyform_embed_link_610018" class="contact" href="http://www.foxyform.com/">foxyform</a>
 <script type="text/javascript">
 (function(d, t){
    var g = d.createElement(t),
