--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
             
             <article>
                 <h1>Home</h1>
-                <img id="self2" src="img/self2.jpg" alt="self" class="center" />
+                <div class="hero"> 
+                    <img id="self2" src="img/self2.jpg" alt="self" /> 
+                </div>
                 <p>Hello world! My name is Taryn Bray and I am a third year Journalism and Telecommunications student at the University of Florida. </p>
                 <p> GO GATORS!</p>
                 <p>I am specializing in broadcasting and digital media with a hopes to pursue a career in the sports industry after graduating in May 2016.</p>
                 <p>Thanks for checking out my site and I hope you enjoy it. If you have any questions or comments please feel free to navigate to the <a href="contact.html">contact</a> page where you will find a contact form.</p>
-            <h2>Social:</h2>
-                <p>Let's connect!</p>
+                <h2>Let's get social:</h2>
+                <p>Want to connect?</p>
                 <a href="http://www.linkedin.com/pub/taryn-bray/7b/339/1ab"><img id="linkedin" class="center" src="img/linkedin.jpg" /> </a>
                 <p> Follow me!</p>
         <a class="twitter-timeline" href="https://twitter.com/taryn_leighb" data-widget-id="537699312881250304">Tweets by @taryn_leighb</a>
