--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
             </nav>
 
     <body>
-        <img id="resume" src="img/resume.JPG" alt="resume" class="center" /> 
+        <img id="resume" src="img/resume.jpg" alt="resume" class="center" /> 
         
     </body>
     
