--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="author" content="Taryn Bray">
+        <meta name="author" content="Taryn Bray" >
         <link href="css/base.css" rel="stylesheet" />
     </head>
 
@@ -32,7 +32,7 @@
                 <p>Thanks for checking out my site and I hope you enjoy it. If you have any questions or comments please feel free to navigate to the <a href="contact.html">contact</a> page where you will find a contact form.</p>
                 <h2>Let's get social:</h2>
                 <p>Want to connect?</p>
-                <a href="http://www.linkedin.com/pub/taryn-bray/7b/339/1ab"><img id="linkedin" class="center" src="img/linkedin.jpg" /> </a>
+                <a href="http://www.linkedin.com/pub/taryn-bray/7b/339/1ab"><img id="linkedin" alt="linkedin" class="center" src="img/linkedin.jpg" /> </a>
                 <p> Follow me!</p>
         <a class="twitter-timeline" href="https://twitter.com/taryn_leighb" data-widget-id="537699312881250304">Tweets by @taryn_leighb</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
