--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="hero"> 
                     <img id="self2" src="img/self2.jpg" alt="self" /> 
                 </div>
-                <p>Hello world! My name is Taryn Bray and I am a third year Journalism and Telecommunications student at the University of Florida. </p>
+                <p>Hello world! My name is Taryn Bray and I am a senior Journalism and Telecommunications student at the University of Florida. </p>
                 <p> GO GATORS!</p>
                 <p>I am specializing in broadcasting and digital media with a hopes to pursue a career in the sports industry after graduating in May 2016.</p>
                 <p>Thanks for checking out my site and I hope you enjoy it. If you have any questions or comments please feel free to navigate to the <a href="contact.html">contact</a> page where you will find a contact form.</p>
