--- a/about.html
+++ b/about.html
@@ -17,7 +17,6 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="work.html">Work</a>
-                <a href="podcast.html">Podcast</a>
                 <a href="resume.html">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
@@ -25,17 +24,18 @@
             <h1> About </h1>
             <h2> The Basics: </h2>
             <aside>
-             <img id="keys" src="img/keys.jpg" alt="keys" class="half-width" /> 
+             <img id="booth" src="img/samponder.jpg" alt="same" class="half-width" /> 
+                    <caption>(Yes this is Sam Ponder!)</caption>
                 <p>
            I was born and raised in Miami, FL -- the city where some of the most eclectic individuals live and the state where the most insane news stories come from. I am currently in my last year at what I believe is the best university in the nation -- University of Florida and I've loved every second it. My hopes after graduation are to pursue a career in the broadcasting or digital media field within the sports industry. 
             </p> 
-            <p>I am a life-long lover of all things sports with a passion for story telling through social media and journalism. Quiz me on Dwyane Wade or Rory McIlroy and I'll stump you. During my life I've played various sports although in high-school I narrowed it down to basketball and softball. Throughout my high school softball career I was lucky enough to be a starting 2nd basemen on a team that won 3 consecutive state championships in the state of Florida. On weekends you can find me watching every college football game being played, while simultaneously checking college basketball and NBA scores. My passion for sports drives deep and I cannot imagine my career going in any direction other than sports. I try to incorporate my love for sports along with my drive to succeed, humor and personality to create an enjoyable working environment. </p>
-           <img id="booth" src="img/booth.jpg" alt="booth" class="half-width" /> 
+            <p>I am a life-long lover of all things sports with a passion for story telling through social media and broadcasting. During my life I've played various sports although in high-school I narrowed it down to basketball and softball. Throughout my high school softball career I was lucky enough to be a starting 2nd basemen on a team that won 3 consecutive state championships in the state of Florida. On weekends you can find me watching any live sporting event while simultaneously checking scores on my phone. My passion for sports drives deep and I cannot imagine my career going in any direction other than sports. I try to incorporate my love for sports along with my drive to succeed, humor and personality to create an enjoyable working environment. </p>
                 </aside>
+            <p></p>
             </article>
         
         <footer>
-                <p>&copy; 2014 Taryn Bray</p>
+                <p>&copy; 2016 Taryn Bray</p>
             </footer>
 
     </body>
