--- a/codes.html
+++ b/codes.html
@@ -48,6 +48,8 @@
         <p>We can make a link that will <a href="mailto:name@domain.com">send someone an email</a>. </p>
 
 
+<img id="other" src="img/interview.jpg" alt="interview" class="other" >
+
 CSS
 h1 {
     color: #ff4a00;
