--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="work.html">Work</a>
-                <a href="podcast.html">Podcast</a>
                 <a href="resume.html">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
@@ -25,7 +24,7 @@
             <article>
                 <h1>Home</h1>
                 <div class="hero"> 
-                    <img id="self2" src="img/self2.jpg" alt="self" /> 
+                    <img id="self" src="img/lax.jpg" alt="self" /> 
                 </div>
                 <p>Hello world! My name is Taryn Bray and I am a senior Journalism and Telecommunications student at the University of Florida. </p>
                 <p> GO GATORS!</p>
