--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
             <h2>On-Camera:</h2>
                 <p><iframe id="astonvilla" width="600" height="350" class="center" src="https://www.youtube.com/embed/WYiFN4CztXY" frameborder="0" allowfullscreen></iframe></p>
             <h3>Writing:</h3>
-                <h2>GatorZone</h2>
+                <h2>FloridaGators.com</h2>
             <p>1. Florida State’s top-ranked and defending national champion soccer team has lost just two games the past two years. Both to the Florida Gators. <a href="http://www.gatorzone.com/story.php?id=31132">[Click here to continue reading]</a></p>
             <p>2. Out of the 15 new names on the Florida soccer roster, one has really stood out so far. 
 And not just because midfielder Sarah Troccoli is 5-foot-11.  <a href="http://www.gatorzone.com/story.php?id=31156">[Click here to continue reading]</a></p>
@@ -45,7 +45,7 @@ And not just because midfielder Sarah Troccoli is 5-foot-11.  <a href="http://ww
         
         
         <footer>
-                <p>&copy; 2014 Taryn Bray</p>
+                <p>&copy; 2016 Taryn Bray</p>
             </footer>
 
     </body>
